[tool.poetry]
name = "sqf_tools"
version = "0.1.0"
description = ""
authors = ["Ryan Townshend <citizen.townshend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sqf_doc_parser = "sqf_tools.sqf_doc_parser:main"